# IL2CppReflector

./: CMakeLists.txt  README-en.md  README-ru.md  README.md
includes/IL2CppReflector/: class.hpp  field.hpp  il2cpp_reflector.hpp  logger.hpp  method.hpp  property.hpp  struct.hpp  tool.h  type.hpp
includes/IL2CppReflector/api/: api_define.hpp  api_ptr.hpp  array.hpp  assembly.hpp  class.hpp  class_user_data.hpp  custom_attributes.hpp  debug_metadata.hpp  debugger.hpp  domain.hpp  exception.hpp  field.hpp  gc.hpp  gchandle.hpp  il2cpp.hpp  image.hpp  liveness.hpp  logging.hpp  memory_information.hpp  method.hpp  monitor.hpp  object.hpp  property.hpp  runtime.hpp  stacktrace.hpp  stats.hpp  string.hpp  test.hpp  thread.hpp  tls_module.hpp  type.hpp  vm_runtime_info.hpp
includes/utfcpp/utf8/: checked.h  core.h  cpp11.h  cpp17.h  cpp20.h  unchecked.h
src/: class.cpp  field.cpp  il2cpp_reflector.cpp  logger.cpp  method.cpp  property.cpp  struct.cpp  tool.cpp  type.cpp
